# AeroPhoenix

./: .gitignore  .pre-commit-config.yaml  Makefile
.github/workflows/: ci.yml  release.yml
apps/flyd-sim/: Dockerfile  Makefile  go.mod  go.sum  main.go  rest.go
apps/flyd-sim/cmd/server/: main.go
apps/flyd-sim/internal/api/: metrics.go  rest.go
apps/flyd-sim/internal/models/: machine.go
apps/flyd-sim/internal/nats/: publisher.go
apps/flyd-sim/internal/proto/: machine.pb.go  machine_grpc.pb.go
apps/flyd-sim/internal/server/: fsm.go  server.go
apps/flyd-sim/internal/storage/: badger_store.go
apps/flyd-sim/tests/: fsm_test.go
apps/net-sim/: .dockerignore  Cargo.toml  Dockerfile
apps/net-sim/src/: main.rs
apps/orchestrator/: mix.exs
apps/orchestrator/config/: config.exs  dev.exs  test.exs
apps/orchestrator/lib/: orchestrator_web.ex
apps/orchestrator/lib/orchestrator/: application.ex  client.ex  flyd_client.ex  machine.ex  machine_event.ex  machine_fsm.ex  machine_manager.ex  manager.ex  (+5 more)
apps/orchestrator/test/: machine_fsm_test.exs  manager_test.exs
apps/phoenix_ui/: .gitignore  README.md  mix.exs
apps/phoenix_ui/assets/: package-lock.json  package.json
apps/phoenix_ui/config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
apps/phoenix_ui/e2e/: package-lock.json  package.json  playwright.config.ts
apps/phoenix_ui/lib/: phoenix_ui_web.ex
cli/aeropctl/: go.mod  go.sum  main.go
infra/: docker-compose.yml
infra/grafana/dashboards/: aerophoenix-dashboard.json
infra/prometheus/: prometheus.yml
proto/: machine.proto
(+52 files in other folders)
