[package]
name = "net_sim"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.45", features = ["full"] }
warp = "0.3"
reqwest = { version = "0.11", features = ["json","blocking","gzip","rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.10"
